@@ -1,4 +1,10 @@
 cpuinfo escher.cpuinfo
 majors 2.4
 kernel-2.4 2.4.27-1-generic
-usable 2.4.26-1-generic 2.4.26-1-smp 2.4-generic 2.4-smp 2.4.27-1-generic 2.4.27-1-smp
+usable \
+  2.4.26-1-generic \
+  2.4.26-1-smp \
+  2.4-generic \
+  2.4-smp \
+  2.4.27-1-generic \
+  2.4.27-1-smp
