@@ -2,5 +2,15 @@ cpuinfo cittagazze.cpuinfo
 majors 2.6
 flavour amd64-k8
 kernel-2.6 2.6-amd64-k8
-usable 2.6-amd64-generic 2.6-amd64-k8 2.6-amd64-k8-smp 2.6.8-9-amd64-generic 2.6.8-9-amd64-k8 2.6.8-9-amd64-k8-smp
-unusable 2.6-em64t-p4 2.6-em64t-p4-smp 2.6.8-9-em64t-p4 2.6.8-9-em64t-p4-smp
+usable \
+  2.6-amd64-generic \
+  2.6-amd64-k8 \
+  2.6-amd64-k8-smp \
+  2.6.8-9-amd64-generic \
+  2.6.8-9-amd64-k8 \
+  2.6.8-9-amd64-k8-smp
+unusable \
+  2.6-em64t-p4 \
+  2.6-em64t-p4-smp \
+  2.6.8-9-em64t-p4 \
+  2.6.8-9-em64t-p4-smp
