@@ -3,5 +3,20 @@ cpuinfo debussy.cpuinfo
 majors 2.4
 flavour netwinder
 kernel-2.4 2.4.27-netwinder
-usable kernel-image-2.4.25-netwinder kernel-image-2.4.26-netwinder kernel-image-2.4.27-netwinder
-unusable kernel-image-2.4.25-bast kernel-image-2.4.25-lart kernel-image-2.4.25-riscpc kernel-image-2.4.25-riscstation kernel-image-2.4.26-bast kernel-image-2.4.26-lart kernel-image-2.4.26-riscpc kernel-image-2.4.26-riscstation kernel-image-2.4.27-bast kernel-image-2.4.27-lart kernel-image-2.4.27-riscpc kernel-image-2.4.27-riscstation
+usable \
+  kernel-image-2.4.25-netwinder \
+  kernel-image-2.4.26-netwinder \
+  kernel-image-2.4.27-netwinder
+unusable \
+  kernel-image-2.4.25-bast \
+  kernel-image-2.4.25-lart \
+  kernel-image-2.4.25-riscpc \
+  kernel-image-2.4.25-riscstation \
+  kernel-image-2.4.26-bast \
+  kernel-image-2.4.26-lart \
+  kernel-image-2.4.26-riscpc \
+  kernel-image-2.4.26-riscstation \
+  kernel-image-2.4.27-bast \
+  kernel-image-2.4.27-lart \
+  kernel-image-2.4.27-riscpc \
+  kernel-image-2.4.27-riscstation
