@@ -3,5 +3,8 @@ cpuinfo sgi-indy.cpuinfo
 majors 2.4
 flavour r4k-ip22
 kernel-2.4 2.4.27-r4k-ip22
-usable 2.4.27-r4k-ip22
-unusable 2.4.27-r5k-ip22 2.4.27-sb1-swarm-bn
+usable \
+  2.4.27-r4k-ip22
+unusable \
+  2.4.27-r5k-ip22 \
+  2.4.27-sb1-swarm-bn
