@@ -3,5 +3,11 @@ cpuinfo vaughan.cpuinfo
 majors 2.4
 flavour r5k-cobalt
 kernel-2.4 2.4.27-r5k-cobalt
-usable 2.4.27-r5k-cobalt
-unusable 2.4.27-r3k-kn02 2.4.27-r4k-kn04 2.4.27-r5k-lasat 2.4.27-sb1-swarm-bn 2.4.27-xxs1500
+usable \
+  2.4.27-r5k-cobalt
+unusable \
+  2.4.27-r3k-kn02 \
+  2.4.27-r4k-kn04 \
+  2.4.27-r5k-lasat \
+  2.4.27-sb1-swarm-bn \
+  2.4.27-xxs1500
