@@ -2,5 +2,14 @@ cpuinfo raptor.cpuinfo
 majors 2.4 2.6
 kernel-2.4 2.4.27-1-s390
 kernel-2.6 2.6.8-1-s390
-usable 2.4.26-1-s390 2.4.27-1-s390 2.6.8-1-s390
-unusable 2.4.26-1-s390-tape 2.4.26-1-s390x 2.4.27-1-s390-tape 2.4.27-1-s390x 2.6.8-1-s390-tape 2.6.8-1-s390x
+usable \
+  2.4.26-1-s390 \
+  2.4.27-1-s390 \
+  2.6.8-1-s390
+unusable \
+  2.4.26-1-s390-tape \
+  2.4.26-1-s390x \
+  2.4.27-1-s390-tape \
+  2.4.27-1-s390x \
+  2.6.8-1-s390-tape \
+  2.6.8-1-s390x
