@@ -4,5 +4,25 @@ majors 2.4 2.6
 flavour sparc32
 kernel-2.4 2.4-sparc32
 kernel-2.6 2.6-sparc32
-usable 2.4-sparc32 2.4-sparc32-smp 2.4.26-sparc32 2.4.26-sparc32-smp 2.4.27-1-sparc32 2.4.27-1-sparc32-smp 2.6-sparc32 2.6.8-1-sparc32
-unusable 2.4-sparc64 2.4-sparc64-smp 2.4.26-sparc64 2.4.26-sparc64-smp 2.4.27-1-sparc64 2.4.27-1-sparc64-smp 2.6-sparc32-smp 2.6-sparc64 2.6-sparc64-smp 2.6.8-1-sparc32-smp 2.6.8-1-sparc64 2.6.8-1-sparc64-smp
+usable \
+  2.4-sparc32 \
+  2.4-sparc32-smp \
+  2.4.26-sparc32 \
+  2.4.26-sparc32-smp \
+  2.4.27-1-sparc32 \
+  2.4.27-1-sparc32-smp \
+  2.6-sparc32 \
+  2.6.8-1-sparc32
+unusable \
+  2.4-sparc64 \
+  2.4-sparc64-smp \
+  2.4.26-sparc64 \
+  2.4.26-sparc64-smp \
+  2.4.27-1-sparc64 \
+  2.4.27-1-sparc64-smp \
+  2.6-sparc32-smp \
+  2.6-sparc64 \
+  2.6-sparc64-smp \
+  2.6.8-1-sparc32-smp \
+  2.6.8-1-sparc64 \
+  2.6.8-1-sparc64-smp
